# git-utils

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/: release-template.md
.github/workflows/: build.yml  fmt.yml
git-current-branch/: Cargo.toml
git-current-branch/src/: main.rs
git-default-branch/: Cargo.toml
git-default-branch/src/: main.rs
git-repo-title/: Cargo.toml
git-repo-title/src/: main.rs
git-repo-url/: Cargo.toml
git-repo-url/src/: main.rs
git-sync/: Cargo.toml
git-sync/src/: main.rs
git-up/: Cargo.toml
git-up/src/: main.rs
git-utils/: Cargo.toml
git-utils/src/: lib.rs
git-utils/src/errors/: mod.rs
git-utils/src/utils/: mod.rs
