[workspace]
members = [
  "git-utils",
  "git-current-branch",
  "git-default-branch",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
edition = "2021"

[workspace.dependencies]
env_logger = "0.10"
git2 = "0.18"
log = "0.4"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"

[target.'cfg(all(target_os = "linux", any(target_env = "musl", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
